--- a/styles/home.css
+++ b/styles/home.css
@@ -241,8 +241,14 @@ nav {
 .section-5-left {
     width: 60%;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .section-5-title {
+    display: inline-block;
+    width: fit-content;
     margin: 0;
     padding: 0;
     line-height: 1.1;
@@ -254,16 +260,10 @@ nav {
     margin: 1.5rem 0;
     font-weight: var(--fw-m);
 }
-.section-5-right {
-    width: 35%;
-    height: 320px;
-
-    background-image: url('/content/section-2-bg.jpg');
-    background-size: cover;
-    background-position: center;
-
-    border-radius: 20px;
-    box-shadow: 0 0 1rem #000000bb;
+.section-5-right video {
+    max-height: 280px;
+    border-radius: 10px;
+    box-shadow: 0 0 1.5rem #000000bb; 
 }
 
 
@@ -580,7 +580,7 @@ footer {
 .footer-section p {
     color: #ccc;
     font-size: 14px;
-    font-weight: var(--fw-m);
+    font-weight: var(--fw-l);
     line-height: 1.5;
 }
 
@@ -591,6 +591,7 @@ footer {
 
 .footer-section ul li {
     margin: 5px 0;
+    font-weight: var(--fw-l);
 }
 
 .footer-section ul li a {
@@ -616,6 +617,7 @@ footer {
 /* Journey section --------------------------- */
 
 .journey {
+    margin-top: 4rem;
     text-align: center;
     padding: 0px 20px 60px;
 }
