--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -64,6 +64,11 @@
         width: 500px;
     }
 
+    /* section #3 ---------------------------- */
+    .section-3 {
+        gap: 0px;
+    }
+
     /* save 10 section ---------------------- */
     .container .header h1 {
         font-size: 1.8rem;
@@ -131,12 +136,19 @@
     }
 
     /* section #3 -------------------------- */
+    .section-3 {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+        padding: 0 2rem;
+    }
+    .section-3-box {height: fit-content;}
     .section-3-box .box-title {
-        font-size: 1.4rem;
+        font-size: 1rem;
     }
     .section-3-box .box-title i {
-        font-size: 1.3rem;
+        font-size: 1rem;
     }
+    .section-3-box .box-paragraph {font-size: 0.6rem;}
 
     /* section #4 ------------------------ */
     .section-4 {
@@ -269,9 +281,7 @@
     }
 
     /* section #3 -------------------------- */
-    .section-3 {gap: 20px;}
-    .section-3 .box-title {font-size: 1.2rem;}
-    .section-3-box .box-title i {font-size: 1.2rem;}
+    .section-3 {gap: 20px; padding: 0 0.7rem;}
 
     /* section #4 ------------------------ */
     .section-4 {flex-direction: column; gap:10px;}
@@ -466,6 +476,8 @@
     .section-3-box .box-title i {
         margin: 0 0.5rem;
     }
+    .section-3-box .box-title {font-size: 0.8rem;}
+    .section-3-box {padding: 1rem;}
 
     /* section #4 ------------------------ */
     .section-4 ul {
