Updated "WHY SMC"

--- a/styles/_main.css
+++ b/styles/_main.css
@@ -56,7 +56,7 @@ p {
     color: var(--white);
 }
 
-nav, .hero-container, .section-5, footer {
+nav, .hero-container, .section-5, .why, footer {
     padding: 1rem 6rem;
 }
 
