--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -143,6 +143,12 @@
         gap: 40px;
     }
 
+
+    /* why section ------------------------- */
+    .why {
+        padding: 1rem;
+    }
+
     /* about ----------------------------- */
     .about {
         gap: 30px;
