--- a/styles/home.css
+++ b/styles/home.css
@@ -373,6 +373,78 @@ nav {
 .section-4 .list-1 {color:var(--primary);}
 .section-4 .list-2 {color: var(--font);}
 
+
+/* Why SMC section -------------------------------------------------- */
+.why {
+    height: auto;
+    width: 100%;
+    margin: 4rem 0 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+}
+.why-title {
+    margin: 1rem 0;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: var(--fw-l);
+}
+.why-info {
+    width: 100%;
+    flex-grow: 1;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+}
+.why-info div {
+    height: 220px;
+    min-width: 280px;
+    width: 350px;
+    background: var(--grad);
+    border: 2px solid var(--outline);
+    border-radius: 15px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: 500ms;
+}
+.why-info div:hover {
+    transform: scale(1.02);
+    background: linear-gradient(175deg, #182046 35%, #1a2763);
+}
+
+.why-info div span {
+    font-size: 2rem;
+    font-weight: var(--fw-l);
+    color: var(--font);
+}
+.why-points {
+    padding: 1rem;
+    color: var(--white);
+    list-style-type: none;
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 20px;
+}
+.why-points li {font-weight: var(--fw-m);}
+.bottom-description {
+    margin: 1rem 0;
+    font-weight: var(--fw-m);
+    color: var(--font);
+    text-align: center;
+}
+
 /* || About section ------------------------------------------------- */
 
 .about {
@@ -385,28 +457,11 @@ nav {
     
     position: relative;
 }
-.about-description-section {
-    width: 100%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.about-description-section p {
-    width: 80%;
-    text-align: center;
-    font-weight: var(--fw-m);
-}
-
-.desc-title {
-    font-size: var(--fs-l);
-}
 
 .about-wrapper {
     height: auto;
     width: 100%;
-    margin-top: 3rem;
+    margin-top: rem;
     padding: 1rem;
 
     display: flex;
